chore: map struct
- 롬복용 추가
- JVM 컴파일타임에 객체 만들어지도록 추가

hyuil